--- a/.env
+++ b/.env
@@ -2,11 +2,10 @@ STRING_SESSION = BABGqzKMbtQ0Y0n-Jh7lvyJTCczDdA9nKG3otwp4XeWywJc0COrbeLtdsNBfjaM
 API_ID = 11802825
 API_HASH = 778dae976c0ac6a535bdcb1e95c9741f
 BOT_TOKEN = 5387582685:AAFF3SHaD3TrehHPjEsa_IcTvvkop6r8xLU
-MONGO_DB_URI = mongodb+srv://music1forest:abdallah2210226>@cluster0.dhs8aqu.mongodb.net/?retryWrites=true&w=majority
 LOG_GROUP_ID = -1001658651413
 MUSIC_BOT_NAME = Music Forest
 OWNER_ID = 1448333343
-sudo = 1448333343
+OWNER = 1448333343
 PRIVATE_BOT_MODE = True or False
 YOUTUBE_EDIT_SLEEP = 3
 TELEGRAM_EDIT_SLEEP = 5
